<resources>
    <string name="app_name">Pokedex</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="editTextEmailHint">enter your email</string>
    <string name="editTextPasswordHint">enter your password</string>
    <string name="register">Register</string>
    <string name="hint_username">pick your username</string>
    <string name="username">Username</string>
    <string name="navigate_to_sign_in">Already a trainer? Sign in</string>
    <string name="navigate_to_register">New trainer? Register</string>
    <string name="pokedexFragmentPlaceholder">Tu će ići pokedex recycler view</string>
    <string name="favoritesFragmentPlaceholder">Ovdje će ići Favoriti RecyclerView</string>
    <string name="username_placeholder">USERNAME</string>
    <string name="delete_profile"><u>Delete profile</u></string>
    <string name="log_out">Log out</string>
    <string name="profile_info_label">Profile info</string>
    <string name="search_hint">type in to search pokemon</string>
</resources>